<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblUsername_login"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtUsername_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblPassword_login"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtUserPassword_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin_login"
        style="@style/loginBtnStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnLogin_login"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkRemember_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="18dp"
        android:checked="true"
        android:gravity="center_vertical|start"
        android:text="@string/chk_remember"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>